--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.10",
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "classnames": "^2.3.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
-    "typescript-eslint-parser": "^22.0.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -46,8 +44,10 @@
   },
   "devDependencies": {
     "@mate-academy/eslint-config-react-typescript": "^0.0.4",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "eslint": "^7.25.0",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^5.0.0"
   }
 }
